--- a/1_Variablen.ipynb
+++ b/1_Variablen.ipynb
@@ -107,6 +107,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4563365",
+   "metadata": {},
+   "source": [
+    "### Eingabefeld"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "518bb652",
+   "metadata": {},
+   "source": [
+    "Wir als Nutzer können Python auch via Eingabeld Variablen Werte zuweisen.\n",
+    "\n",
+    "So können wir zum Beispiel den Nutzer Fragen wie alt Er/Sie ist, und diesen Wert in einer Variable \"alter\" Speichern:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4e12c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alter = input(\"Wie alt bist du?\")\n",
+    "print(alter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a5e02d7c",
    "metadata": {},
    "source": [
@@ -177,6 +206,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a378e577",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "411ae025",
    "metadata": {},
    "source": [
@@ -205,6 +240,12 @@
     "4 = x\n",
     "print(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae449b6f",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -285,6 +326,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e64e248",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ce0d0b6",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 7:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a230cfc",
+   "metadata": {},
+   "source": [
+    "Schreiben Sie ein Programm, welches den Nutzer nach seinem/ihrem Namen fragt, und anschliessend \"Hallo (name)\" ausgibt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e32a0b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0fd6ed0",
    "metadata": {},
    "outputs": [],
    "source": []
