--- a/2_Aufgaben.ipynb
+++ b/2_Aufgaben.ipynb
@@ -94,12 +94,7 @@
    "id": "6239a031",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "note_1 = 4.2\n",
-    "note_2 = 3.8\n",
-    "schnitt = (note_1 + note_2)/2\n",
-    "print(schnitt)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -168,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "13562437",
    "metadata": {},
    "outputs": [
@@ -176,20 +171,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023\n"
+      "1999\n"
      ]
     }
    ],
    "source": [
-    "x = 24\n",
+    "x = 0\n",
     "result = (1999 + x)%2024\n",
     "print(result)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11eac74a",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 6:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "294387cb",
+   "metadata": {},
+   "source": [
+    "In dieser Aufgabe lernen Sie den f-String kennen.\n",
+    "Der Nutzen von f-Strings liegt in ihrer Einfachheit und Lesbarkeit. Sie ermöglichen es, Variablen und Ausdrücke direkt in Zeichenketten einzufügen, ohne komplizierte Konkatenation von Zeichenketten oder die Verwendung von %-Formatierungsoperatoren. Dies macht den Code übersichtlicher und leichter verständlich.\n",
+    "\n",
+    "F-Strings sind auch sehr flexibel und unterstützen das Einbetten von Ausdrücken, Variablen und sogar die Verwendung von Formatierungsoptionen, um Zahlen oder Datumsangaben in einem bestimmten Format anzuzeigen.\n",
+    "\n",
+    "Der folgende Code enthält noch einige Fehler. Korrigieren Sie diese, und verändern Sie das Programm so, dass auch die Temperatur in Kelvin angezeigt wird.\n",
+    "\n",
+    "Wir können Celsius in Fahrenheit umrechnen, indem wir folgende Formel verwenden: \n",
+    "\n",
+    "Grad Fahrenheit = Grad Celsius mal 1,8 plus 32. Beispiel 37 °C: 37 mal 1,8 ergibt 66,6."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "50088a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4003433461.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    temp_f = temp_c * (1.8 + 32)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_c = float(input(\"Grad: \")\n",
+    "temp_f = temp_c * (1.8 + 32)\n",
+    "print(f\"Es ist {temp_f} Grad Celsius oder {temp_c} Grad Fahrenheit.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d92867da",
+   "id": "ef3902be",
    "metadata": {},
    "outputs": [],
    "source": []
