--- a/00_LSG_Erste_Schritte_24.ipynb
+++ b/00_LSG_Erste_Schritte_24.ipynb
@@ -5,7 +5,7 @@
    "id": "455b9fe6",
    "metadata": {},
    "source": [
-    "# Erste Schritte"
+    "# LSG Erste Schritte"
    ]
   },
   {
@@ -108,6 +108,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c5fd05e4-1984-4360-b75e-e9d94db13290",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bonjour, tout le monde!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bonjour, tout le monde!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "87d998ef",
    "metadata": {},
@@ -126,13 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d171cb87",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durchsage\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Du\"+\"rchsage\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,11 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d2791cea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KZIKZIKZI\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3*\"KZI\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,12 +205,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c481cc88",
+   "cell_type": "markdown",
+   "id": "973f86b2-dc22-4717-8da8-40e1599c669f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Der Server überlastet und das Programm bricht ab."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,19 +239,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e6af1909",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kantonsschule\n",
+      "Zimmerberg\n",
+      "2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Kantonsschule\\nZimmerberg\\n2023\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b0ae12-46f3-4c3d-a8ef-0d1fd0def3cc",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "367e427a-9870-45d1-a88b-6ee4c0fd8c57",
+   "metadata": {},
+   "source": [
+    "Schreiben Sie ein Programm, welches zwei Zahlen addiert und das Resultat ausgibt. (Bsp 3+4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3588103c",
+   "execution_count": 6,
+   "id": "1713e954-1e00-42d6-bb15-1fef21d97008",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3+4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae73cafc-a5a0-434e-ad55-f26c0eda9f7d",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f85d3b3f-ff49-4468-97e7-1bafc5e925a4",
+   "metadata": {},
+   "source": [
+    "Recherchieren Sie, was LOC oder SLOC im Kontext der Informatik bedeutet, und wieviele LOC z.B Minecraft hat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10150496-e00d-40c3-afe6-cad30b7dfd1e",
+   "metadata": {},
+   "source": [
+    "\t•\tLOC umfasst alle Zeilen im Code, einschließlich Kommentare und Leerzeilen.\n",
+    "\t•\tSLOC zählt nur die tatsächlichen Codezeilen und ist eine präzisere Metrik für Softwaregröße und -komplexität.\n",
+    " Bei Minecraft ca. 200000-400000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e267f781-1086-4f56-b530-d0fa87189f8e",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f429c8eb-c5d1-498e-8f34-75c400a2d85d",
+   "metadata": {},
+   "source": [
+    "Schreiben Sie ein Programm, welches einem 100 Lorem-Ipsum-Wörter ausgibt. (Hilfe: https://www.loremipsum.de/)\n",
+    "Fügen Sie an geeigneten Stellen Zeilenumbrüche ein."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3e5eef2d-e672-49f0-b8fb-234ab3dbe980",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \n",
+      "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\")\n"
+   ]
   }
  ],
  "metadata": {
