--- a/01_Variablen_24.ipynb
+++ b/01_Variablen_24.ipynb
@@ -284,7 +284,7 @@
    "id": "da1226ab",
    "metadata": {},
    "source": [
-    "Schreiben Sie ein Programm, das Köpfe, Schultern, Knie und Zehen auf einer Party zählt.\n",
+    "Schreiben Sie ein Programm, das Köpfe, Schultern, Knie und Zehen auf einer Party ausgibt.\n",
     "\n",
     "Eine Variable personen ist schon bekannt, und die Anzahl der Personen auf der Party ist darin bereits gespeichert.\n",
     "Der Code muss 4 Variablen definieren: \n",
@@ -293,13 +293,15 @@
     "    knie (Anzahl der Knie)\n",
     "    zehen (Anzahl der Zehen)\n",
     "\n",
-    "Geben Sie die Werte der Variablen mittels print() aus."
+    "Geben Sie die Werte der Variablen mittels print() aus.\n",
+    "\n",
+    "--> Testen Sie ihr Programm mit dem Wert personen = 10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d286995b",
+   "id": "6533029e-9b3c-427e-ba83-01577437797b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,9 +357,25 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "9800fa3e-6aa4-488b-8970-7a5f1408f6ec",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 8:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec8facb-16ba-4913-9408-892b7f66f579",
+   "metadata": {},
+   "source": [
+    "Schreiben Sie ein Programm, welches Sie nach 4 Zahlen fragt, und ihnen anschliessend die Differenz und die Summe dieser vier Zahlen ausgibt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fd6ed0",
+   "id": "245f72f0-ae48-49be-b83f-1b2edd881f61",
    "metadata": {},
    "outputs": [],
    "source": []
