--- a/06_If-Anweisungen_mit_LSG.ipynb
+++ b/06_If-Anweisungen_mit_LSG.ipynb
@@ -595,6 +595,101 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29673101-a396-49a1-a3f9-6a2a53590e00",
+   "metadata": {},
+   "source": [
+    "## Aufgabe 6:\n",
+    "\n",
+    "So weit sahen wir im «condition»-Teil einer if-Aussage einen einfachen numerischen Vergleich x > y, der wahr ist, wenn x größer als y, und falsch, wenn x kleiner oder gleich y. Allgemein werden Ausdrücke, deren Wert entweder wahr oder falsch ist, Boolean genannt (siehe George Boole; auf Deutsch sagt man auch \"boolesch\"). In Python wird der bool-Typ benutzt, um Werte von Boolean-Ausdrücken zu repräsentieren. Für diesen Typ existieren nur zwei Werte: True und False.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2200c01-3cce-45dc-a2da-4c8dc3934a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Beispiel:\n",
+    "print(2>1)\n",
+    "b = False\n",
+    "print(b)\n",
+    "print(type(b), type(2>1), type(True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5cb2a02-0aae-4090-aeea-cad3486212d9",
+   "metadata": {},
+   "source": [
+    "Schreibe nun eine if-Anweisung, welche immer ausgeführt wird und eine, welche nie ausgeführt wird mit diesem Wissen über Boolean-Ausdrücke:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2876651-8341-405c-bfc3-cad16ab8ca2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3262a019-c693-453d-8e4f-ae454e5b20f1",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "# Beispiele:\n",
+    "if 100<200:\n",
+    "    print(\"Immer Wahr\")\n",
+    "if 4 % 3 == 0:\n",
+    "    print(\"Nie Wahr\")\n",
+    "if True:\n",
+    "    print(\"Wahr\")\n",
+    "if False:\n",
+    "    print(\"Falsch\")\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f6b290d-3450-4932-81d9-30b3910e09d5",
+   "metadata": {},
+   "source": [
+    "## Aufgabe 7:\n",
+    "\n",
+    "Schreibe ein Programm, das einen Integer von input einliest, dann eine der Wörter Positive, Negative, oder Zero ausgibt, entsprechend dem, ob die Nummer positiv, negativ oder Null ist.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f05bbf-b9e1-4279-a123-2de5daa91e76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a14dd64b-a3f9-4895-9891-5f8b6ebea7a3",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary>Lösung:</summary>\n",
+    "\n",
+    "  <pre><code class=\"language-python\">\n",
+    "zahl = int(input(\"Geben Sie eine Zahl ein:\"))\n",
+    "if zahl > 0:\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c17932a",
    "metadata": {},
    "source": [
